@@ -1,6 +1,8 @@
 0.11.99
 	+ System and software updates work correctly again with progress
 	indicator showing process already finished
+	+ ebox-software cron script locks software module to work in order
+	to hide corner cases
 	+ Bugfix. libebox is treated as an eBox package and not as a
 	system package
 0.11
